alignment issues

--- a/src/css/Details.css
+++ b/src/css/Details.css
@@ -1,4 +1,4 @@
-.details {
+.Details {
     width: 89%;
     margin: 0 auto;
     margin-bottom: 2em;
